<resources>
    <string name="app_name">易开发</string>
    <string name="request_write_sdcard_notice">该功能需要读写内部存储权限，点击前往设置</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="action_settings">Settings</string>
    <string name="onboarding_pre_button_description">上一步</string>
    <string name="onboarding_finish_button_description">完成</string>
    <string name="onboarding_next_button_description">下一步</string>
    <string name="float_window_permission">系统悬浮窗权限</string>
    <string name="float_window_opened">悬浮窗权限已开启</string>
    <string name="float_window_closed">悬浮窗权限未开启，点击前往设置</string>
    <string name="accessibility_service_opened">无障碍功能已开启</string>
    <string name="devices_is_not_root">该设备未root，无法开启</string>
    <string name="base_setting">基本设置</string>
    <string name="advance_setting">高级功能</string>
    <string name="meme">备注</string>
    <string name="open_accessibility_service">开启无障碍辅助</string>
    <string name="open_float_window">开启悬浮窗权限</string>
    <string name="open_root_permission_summary">推荐开启，用于获取应用SharedPreference、数据库等数据，关闭后部分信息无法显示</string>
    <string name="open_root_permission_title">开启root权限</string>
    <string name="open_xposed_title">启用Xposed特性</string>
    <string name="open_xposed_summary">支持脱壳，更多功能持续开发中，点击进入管理</string>
    <string name="accessibility_description">辅助功能用于界面布局分析等</string>
    <string name="about">关于</string>
    <string name="about_content">软件开发中，交流群：627962572</string>
    <string name="page_analyze">界面布局</string>
    <string name="open_root_notice">功能需要root权限，请开启后使用！</string>
    <string name="click_to_analyze">点击查看</string>
    <string name="first_install_time">首次安装时间</string>
    <string name="last_update_time">最后更新时间</string>
    <string name="demon_process">守护进程</string>
    <string name="demon_process_content">易开发守护进程，点击打开易开发</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="notice">提示</string>
    <string name="save_and_exit">保存并退出</string>
    <string name="do_not_save">不保存</string>
    <string name="input_error">输入有误</string>
    <string name="restore">恢复</string>
    <string name="save_shared_preference_failed">保存失败，请按错误提示修改后再提交</string>
    <string name="confirm_shared_preference_save">检测到值有修改，是否保存？</string>
    <string name="save_shared_preference_success">保存成功，由于缓存原因，新数据重启后才会生效，是否立即重启%1$s？</string>
    <string name="exit">退出</string>
    <string name="exit_content">是否退出应用？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="copy_group_number">复制群号</string>
    <string name="copy_success">复制成功</string>
    <string name="data_info">数据信息</string>
    <string name="base_info">基本信息</string>
    <string name="enforce_type">加固类型</string>
    <string name="analyzing">正在分析</string>
    <string name="waiting">请稍后…</string>
    <string name="getting_app_info">正在获取应用信息</string>
    <string name="please_open_accessbility_service">请开启无障碍功能</string>
    <string name="table">表</string>
    <string name="table_data_is_empty">该表数据为空</string>
    <string name="get_database_failed">获取数据库信息失败</string>
    <string name="getting">获取中…</string>
    <string name="database_list">数据库列表</string>
    <string name="none">无</string>
    <string name="app_setting">应用设置</string>
    <string name="backup_app_file">备份应用</string>
    <string name="restore_app_file">还原应用</string>
    <string name="restart_app">重启应用</string>
    <string name="stop_app">停止应用</string>
    <string name="delete_app_data">清理应用数据</string>
    <string name="uninstall_app">卸载应用</string>
    <string name="please_open_root">请开启root权限</string>
    <string name="confirm_delete_app_data">是否清除数据和缓存?</string>
    <string name="clear_complete">清理完成</string>
    <string name="confirm_stop_app">是否停止该应用？</string>
    <string name="confirm_restart_app">是否重启该应用？</string>
    <string name="restart_failed">重启失败</string>
    <string name="backup_success_msg">备份成功，文件已备份到内部存储下com.wrbug.developerHelper目录中</string>
    <string name="backup_failed">备份失败</string>
    <string name="backup_success_and_share_msg">备份成功，文件已备份到内部存储下com.wrbug.developerHelper目录中，是否立即分享给好友？</string>
    <string name="share_failed">分享失败</string>
    <string name="packing_files">正在打包文件</string>
    <string name="export_failed">导出失败！</string>
    <string name="remove_item">移除该项</string>
    <string name="open_xposed_first">请先开启Xposed设置</string>
    <string name="check_update">检查更新</string>
    <string name="checking_update">正在检查新版本…</string>
    <string name="no_new_version">暂无新版本</string>
    <string name="check_update_failed">检查失败…</string>
    <string name="find_new_version">发现新版本</string>
    <string name="download">下载</string>
    <string name="open_notification_title">通知栏常驻</string>
    <string name="open_notification_summary">用于进程保活，当应用经常被杀死时，请打开该功能</string>
    <string name="select_backup_content">请选择需要备份的内容,备份所有数据支持无损恢复</string>
    <string name="backuping_data">正在备份数据</string>
    <string name="backup_fail">备份失败</string>
    <string name="ignore_backup">跳过该备份</string>
    <string name="backuping_notice">备份正在进行中，请勿关闭该窗口</string>
    <string name="item_backup_apk">应用安装包</string>
    <string name="item_backup_data">Data目录</string>
    <string name="item_backup_android_data">sdcard/Data目录</string>
    <string name="backup_success_notice">备份已完成，您可以前往 <i>%1$s</i> 目录查看备份文件</string>
    <string name="backup_waiting">等待中</string>
    <string name="item_zip_backup_file">打包备份文件</string>
    <string name="no_data">暂无数据</string>
    <string name="app_info_backup_count">%1$d个备份(%2$s)</string>
    <string name="last_backup_time">上一次：%1$s</string>
    <string name="backup_system_app_tag">[系统]</string>
    <string name="backup_uninstalled_app_tag">[未安装]</string>
    <string name="other_function">其他功能</string>
    <string name="no_need_to_backup">无需备份</string>
    <string name="backup_manager">备份管理</string>
    <string name="recover_app">恢复应用</string>
    <string name="backup_managet_summary">管理/恢复已备份的应用</string>
    <string name="canceled">已取消</string>
    <string name="backup_default_meme">%1$s 的备份</string>
    <string name="item_swipe_menu_delete">删除</string>
    <string name="item_swipe_menu_restore">恢复</string>
    <string name="delete_backup_notice">是否删除该备份？</string>
    <string name="delete_backup_failed_retry">删除备份失败，请重试</string>
    <string name="recover_data_title">选择需要恢复的数据</string>
    <string name="time_line_recover_title">恢复%1$s</string>
    <string name="not_installed_and_backup_apk_notice">未安装该应用，且apk未备份，无法恢复</string>
    <string name="apk_version_backup_version_not_same_notice">当前应用版本[%1$s]与备份版本[%2$s]不一致，备份数据可能不兼容，建议勾选恢复安装包，是否继续</string>
    <string name="recovering_app_data">正在恢复%1$s数据</string>
    <string name="recover_success_launch_app">正在启动 %1$s</string>
</resources>
